--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -12,6 +12,7 @@
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationMigrationActivity-->
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal está actualizándose...</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Actualmente: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Aínda non tes establecida unha frase de acceso!</string>
@@ -63,6 +64,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal require permiso para poder tirar fotografías, pero este foi denegado de forma permanente. Vai aos axustes da aplicación, selecciona \"Permisos\" e activa \"Cámara\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Subindo contido multimedia...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Comprimindo video...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Erro ao reproducir o audio!</string>
   <!--BlockedContactsActivity-->
@@ -77,7 +79,19 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Erro ao gardar a imaxe.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Capturar</string>
+  <string name="CameraXFragment_change_camera_description">Cambiar cámara</string>
+  <string name="CameraXFragment_open_gallery_description">Abrir galería</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Contactos recentes</string>
+  <string name="CameraContacts_signal_contacts">Contactos de Signal</string>
+  <string name="CameraContacts_signal_groups">Grupos de Signal</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Podes compartir cun máximo de %d conversas.</string>
+  <string name="CameraContacts_select_signal_recipients">Seleccionar destinatarios de Signal</string>
+  <string name="CameraContacts_no_signal_contacts">Sen contactos en Signal</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Só podes usar o botón da cámara para enviar fotos a contactos de Signal.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Non atopas o que andas a buscar?</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Convida a un contacto a se unir a Signal</string>
   <string name="CameraContacts__menu_search">Buscar</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eliminar</string>
@@ -210,6 +224,7 @@
   <string name="ConversationFragment_deleting_messages">Borrando mensaxes...</string>
   <string name="ConversationFragment_quoted_message_not_found">Non se atopou a mensaxe orixinal</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">A mensaxe orixinal xa non está máis dispoñible</string>
+  <string name="ConversationFragment_failed_to_open_message">Erro ao abrir a mensaxe</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Non hai ningún navegador instalado no teu dispositivo.</string>
   <!--ConversationListFragment-->
@@ -248,6 +263,7 @@
   <string name="CreateProfileActivity_profile_name">Nome do perfil</string>
   <string name="CreateProfileActivity_set_up_your_profile">Establece o teu perfil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Os perfís de Signal están cifrados de principio a fin e o servizo de Signal en ningún momento ten acceso a esta información.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Establecer avatar</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Uso personalizado: %s</string>
   <string name="CustomDefaultPreference_using_default">Uso predefinido: %s</string>
@@ -405,6 +421,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Erro ao descargar a mensaxe MMS, toca para volver tentar</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Enviar a %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Abrir cámara</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Toca para seleccionar</string>
   <!--MediaSendActivity-->
@@ -413,11 +430,14 @@
   <string name="MediaSendActivity_camera_unavailable">Cámara non dispoñible.</string>
   <string name="MediaSendActivity_message_to_s">Mensaxe para %s</string>
   <string name="MediaSendActivity_message">Mensaxe</string>
+  <string name="MediaSendActivity_select_recipients">Seleccionar destinatarios</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal necesita acceder aos teus contactos para poder mostralos.</string>
+  <string name="MediaSendActivity_signal_needs_contacts_permission_in_order_to_show_your_contacts_but_it_has_been_permanently_denied">Signal necesita permiso para acceder aos contactos e poder mostrarchos, pero foi denegado de forma permanente. Vai aos axustes da aplicación, selecciona \"Permisos\" e activa \"Contactos\".</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Non podes compartir máis de %d elemento.</item>
     <item quantity="other">Non podes compartir máis de %d elementos.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Seleccionar destinatarios</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Ficheiros multimedia</string>
   <!--MessageRecord-->
@@ -557,6 +577,8 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Insire o código que che enviamos a %s</string>
   <string name="RegistrationActivity_call">Chamar</string>
   <!--RevealableMessageView-->
+  <string name="RevealableMessageView_view_photo">Ver fotografía</string>
+  <string name="RevealableMessageView_viewed">Vista</string>
   <string name="RevealableMessageView_photo">Fotografía</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Erro ao gardar os cambios na imaxe</string>
@@ -591,6 +613,7 @@
   <string name="SmsMessageRecord_secure_session_reset_s">%s restableceu a conexión segura.</string>
   <string name="SmsMessageRecord_duplicate_message">Mensaxe duplicada.</string>
   <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">Esta mensaxe non se puido procesar porque foi enviada desde unha versión máis recente de Signal. Logo de te actualizares, pídelle ao teu contacto que cha volva enviar.</string>
+  <string name="SmsMessageRecord_error_handling_incoming_message">Erro ao xestionar a mensaxe recibida</string>
   <!--StickerManagementActivity-->
   <string name="StickerManagementActivity_stickers">Adhesivos</string>
   <!--StickerManagementAdapter-->
@@ -618,6 +641,7 @@
   <string name="ThreadRecord_missed_call">Chamada perdida</string>
   <string name="ThreadRecord_media_message">Mensaxe multimedia</string>
   <string name="ThreadRecord_sticker">Adhesivo</string>
+  <string name="ThreadRecord_disappearing_photo">Desaparición das fotografías</string>
   <string name="ThreadRecord_s_is_on_signal">%s está en Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Desaparición das mensaxes desactivada</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Desaparición das mensaxes establecida en%s</string>
@@ -692,6 +716,7 @@
   <string name="MessageNotifier_mark_read">Marcar como lida</string>
   <string name="MessageNotifier_media_message">Mensaxe multimedia</string>
   <string name="MessageNotifier_sticker">Adhesivo</string>
+  <string name="MessageNotifier_disappearing_photo">Desaparición das fotografías</string>
   <string name="MessageNotifier_reply">Responder</string>
   <string name="MessageNotifier_signal_message">Mensaxe de Signal</string>
   <string name="MessageNotifier_unsecured_sms">SMS insegura</string>
@@ -747,8 +772,12 @@
   <!--WebRtcCallControls Content Descriptions-->
   <string name="WebRtcCallControls_contact_photo_description">Foto do contacto</string>
   <string name="WebRtcCallControls_speaker_button_description">Altofalante</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Silenciar</string>
+  <string name="WebRtcCallControls_your_camera_button_description">A túa cámara</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Cambiar á cámara traseira</string>
   <string name="WebRtcCallControls_answer_call_description">Responder chamada</string>
+  <string name="WebRtcCallControls_reject_call_description">Rexeitar chamada</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Audio</string>
   <string name="attachment_type_selector__audio_description">Audio</string>
@@ -772,6 +801,9 @@
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Inserir nome ou número</string>
   <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Limpar o texto inserido</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Mostrar teclado</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Mostrar teclado de marcación</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Sen contactos.</string>
   <string name="contact_selection_group_activity__finding_contacts">Cargando contactos...</string>
@@ -1176,6 +1208,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">Arquivar selección</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Desarquivar selección</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Axustes do atallo</string>
   <string name="conversation_list_search_description">Buscar</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Foto do contacto</string>
@@ -1184,6 +1217,7 @@
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Nada. Ren. Res. Nin miga! Nin gota!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Nova conversa</string>
+  <string name="conversation_list_fragment__open_camera_description">Abrir cámara</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Dálle á túa caixa de entrada algo para escribir. Comeza enviándolle unha mensaxe a un amigo ou amiga.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Restablecer sesión segura</string>
