--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -991,8 +991,7 @@
     <string name="conversation_item_received__contact_photo_description">Contact photo</string>
 
     <!-- audio_view -->
-    <string name="audio_view__play_accessibility_description">Play</string>
-    <string name="audio_view__pause_accessibility_description">Pause</string>
+    <string name="audio_view__play_pause_accessibility_description">Play ... Pause</string>
     <string name="audio_view__download_accessibility_description">Download</string>
 
     <!-- QuoteView -->
