--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -794,6 +794,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="change_passphrase_activity__repeat_new_passphrase">Repetiu la contrasenya nova</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Introduïu un nom o número</string>
+  <string name="contact_selection_activity__invite_to_signal">Convida al Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Neteja el text introduït</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Mostra el teclat</string>
@@ -839,8 +840,6 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Foto del contacte</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Reprodueix</string>
-  <string name="audio_view__pause_accessibility_description">Pausa</string>
   <string name="audio_view__download_accessibility_description">Baixa</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Àudio</string>
