--- a/res/values-eo/strings.xml
+++ b/res/values-eo/strings.xml
@@ -798,6 +798,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="change_passphrase_activity__repeat_new_passphrase">Retajpu novan pasfrazon</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Entajpu nomon aŭ numeron</string>
+  <string name="contact_selection_activity__invite_to_signal">Inviti al Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Viŝi la entajpitan tekston</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Montri la klavaron</string>
@@ -843,8 +844,6 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Kontakta bildo</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Ludi</string>
-  <string name="audio_view__pause_accessibility_description">Paŭzigi</string>
   <string name="audio_view__download_accessibility_description">Elŝuti</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Sonaĵo</string>
