--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -719,6 +719,7 @@ Diterima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="change_passphrase_activity__repeat_new_passphrase">Ulangi frasa sandi baru</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Masukkan nama atau nomor</string>
+  <string name="contact_selection_activity__invite_to_signal">Undang gabung ke Signal</string>
   <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Tidak ada kontak</string>
@@ -758,8 +759,6 @@ Diterima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Foto kontak</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Putar</string>
-  <string name="audio_view__pause_accessibility_description">Jeda</string>
   <string name="audio_view__download_accessibility_description">Unduh</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Audio</string>
