--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -816,6 +816,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="change_passphrase_activity__repeat_new_passphrase">Repetă parola nouă</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Introduceți un nume sau un număr</string>
+  <string name="contact_selection_activity__invite_to_signal">Invitați la Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Ștergeți textul introdus</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Afișați tastatura</string>
@@ -861,8 +862,6 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Poză contact</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Redare</string>
-  <string name="audio_view__pause_accessibility_description">Pauză</string>
   <string name="audio_view__download_accessibility_description">Descarcă</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Audio</string>
