--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -794,6 +794,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="change_passphrase_activity__repeat_new_passphrase">Répéter la nouvelle phrase de passe</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Saisir un nom ou un numéro</string>
+  <string name="contact_selection_activity__invite_to_signal">Inviter à Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Supprimer le texte entré</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Montrer le clavier</string>
@@ -839,8 +840,6 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Photo du contact</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Lire</string>
-  <string name="audio_view__pause_accessibility_description">Mettre en pause</string>
   <string name="audio_view__download_accessibility_description">Télécharger</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Son</string>
