--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -803,6 +803,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="change_passphrase_activity__repeat_new_passphrase">Új jelmondat megismétlése</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Adj meg nevet vagy számot</string>
+  <string name="contact_selection_activity__invite_to_signal">Meghívás a Signal-ba</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Beírt szöveg törlése</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Billentyázet megjelenítése</string>
@@ -848,8 +849,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Kontakt fotó</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Lejátszás</string>
-  <string name="audio_view__pause_accessibility_description">Szünet</string>
+  <string name="audio_view__play_pause_accessibility_description">Lejátszás ... Szünet</string>
   <string name="audio_view__download_accessibility_description">Letöltés</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Hang</string>
