--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -836,6 +836,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">חזור על משפט סיסמה חדש</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">הכנס שם או מספר</string>
+  <string name="contact_selection_activity__invite_to_signal">הזמן אל Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">נקה טקסט מוכנס</string>
   <string name="contact_filter_toolbar__show_keyboard_description">הראה מקלדת</string>
@@ -881,8 +882,6 @@
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">תצלום איש קשר</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">נגן</string>
-  <string name="audio_view__pause_accessibility_description">השהה</string>
   <string name="audio_view__download_accessibility_description">הורד</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">שמע</string>
