--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -768,6 +768,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">新しいパスワードを再入力</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">名前もしくは番号を入力</string>
+  <string name="contact_selection_activity__invite_to_signal">Signalに招待する</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">テキストを消去</string>
   <string name="contact_filter_toolbar__show_keyboard_description">キーボードを表示</string>
@@ -813,8 +814,6 @@
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">連絡先の写真</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">再生</string>
-  <string name="audio_view__pause_accessibility_description">一時停止</string>
   <string name="audio_view__download_accessibility_description">ダウンロード</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">音声</string>
