--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -714,6 +714,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">Şifreya nû dubare bikin</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Navek an hejmarek binivîse</string>
+  <string name="contact_selection_activity__invite_to_signal">Vexwîne Signalê</string>
   <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Berdeng tune ne</string>
@@ -753,8 +754,6 @@
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Wêneyê berdengî</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Lêxe</string>
-  <string name="audio_view__pause_accessibility_description">Rawestîne</string>
   <string name="audio_view__download_accessibility_description">Daxîne</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Deng</string>
