--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -842,6 +842,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">Pakartokite naują slaptafrazę</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Įveskite vardą ar numerį</string>
+  <string name="contact_selection_activity__invite_to_signal">Pakviesti į Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Išvalyti įvestą tekstą</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Rodyti klaviatūrą</string>
@@ -887,8 +888,7 @@
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Adresato nuotrauka</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Groti</string>
-  <string name="audio_view__pause_accessibility_description">Pristabdyti</string>
+  <string name="audio_view__play_pause_accessibility_description">Atkurti ... Pristabdyti</string>
   <string name="audio_view__download_accessibility_description">Atsisiųsti</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Garso įrašai</string>
