--- a/res/values-nn/strings.xml
+++ b/res/values-nn/strings.xml
@@ -796,6 +796,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="change_passphrase_activity__repeat_new_passphrase">Gjenta ny passordfrase</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Skriv inn namn eller nummer</string>
+  <string name="contact_selection_activity__invite_to_signal">Inviter til Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Tøm tekstfeltet</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Vis tastatur</string>
@@ -841,8 +842,6 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Kontaktfoto</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Spel</string>
-  <string name="audio_view__pause_accessibility_description">Pause</string>
   <string name="audio_view__download_accessibility_description">Last ned</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Lyd</string>
