--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -799,6 +799,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">Repita a nova frase-chave</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Digite o nome ou número</string>
+  <string name="contact_selection_activity__invite_to_signal">Convidar para o Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Limpar texto inserido</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Mostrar teclado</string>
@@ -844,8 +845,6 @@
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Foto do contato</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Tocar</string>
-  <string name="audio_view__pause_accessibility_description">Pausar</string>
   <string name="audio_view__download_accessibility_description">Baixar</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Áudio</string>
