--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -796,6 +796,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="change_passphrase_activity__repeat_new_passphrase">Repita a frase-passe nova</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Introduza o nome ou número</string>
+  <string name="contact_selection_activity__invite_to_signal">Convidar para o Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Limpara o texto introduzido</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Exibir teclado</string>
@@ -841,8 +842,6 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Foto de contacto</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Reproduzir</string>
-  <string name="audio_view__pause_accessibility_description">Pausar</string>
   <string name="audio_view__download_accessibility_description">Descarregar</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Áudio</string>
