--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -841,6 +841,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="change_passphrase_activity__repeat_new_passphrase">Zopakujte nové heslo</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Zadajte meno alebo číslo</string>
+  <string name="contact_selection_activity__invite_to_signal">Pozvať do Signalu</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Vymazať zadaný text</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Zobraziť klávesnicu</string>
@@ -886,8 +887,6 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Fotka kontaktu</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Prehrať</string>
-  <string name="audio_view__pause_accessibility_description">Pozastaviť</string>
   <string name="audio_view__download_accessibility_description">Stiahnuť</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Zvuk</string>
