--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -833,6 +833,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="change_passphrase_activity__repeat_new_passphrase">Ponovno vnesite novo geslo</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Vnesite ime ali številko ...</string>
+  <string name="contact_selection_activity__invite_to_signal">Povabi na Signal</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Izbriši vneseni tekst</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Prikaži tipkovnico</string>
@@ -878,8 +879,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Fotografija stika</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Predvajaj</string>
-  <string name="audio_view__pause_accessibility_description">Pavza</string>
+  <string name="audio_view__play_pause_accessibility_description">Predvajaj ... Pavza</string>
   <string name="audio_view__download_accessibility_description">Prenesi</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Zvok</string>
