--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -798,6 +798,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="change_passphrase_activity__repeat_new_passphrase">Yeni parolayı tekrarlayın</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">İsim veya numara girin</string>
+  <string name="contact_selection_activity__invite_to_signal">Signal\'e davet et</string>
   <!--contact_filter_toolbar-->
   <string name="contact_filter_toolbar__clear_entered_text_description">Yazılı metni temizle</string>
   <string name="contact_filter_toolbar__show_keyboard_description">Klavyeyi göster</string>
@@ -843,8 +844,6 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Kişi fotoğrafı</string>
   <!--audio_view-->
-  <string name="audio_view__play_accessibility_description">Oynat</string>
-  <string name="audio_view__pause_accessibility_description">Durdur</string>
   <string name="audio_view__download_accessibility_description">İndir</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Ses</string>
