--- a/res/values-eo/strings.xml
+++ b/res/values-eo/strings.xml
@@ -12,6 +12,7 @@
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationMigrationActivity-->
+  <string name="ApplicationMigrationActivity__signal_is_updating">Ĝisdatigo de Signal...</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Aktuale: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Vi ankoraŭ ne metis pasfrazon!</string>
@@ -844,6 +845,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Kontakta bildo</string>
   <!--audio_view-->
+  <string name="audio_view__play_pause_accessibility_description">Ludi ... Paŭzigi</string>
   <string name="audio_view__download_accessibility_description">Elŝuti</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Sonaĵo</string>
